[gd_scene load_steps=5 format=3 uid="uid://b0eo5lvnrwidu"]

[ext_resource type="Script" path="res://Scripts/GraphNodes/BridgeInNode.gd" id="1_8y1eo"]
[ext_resource type="Texture2D" uid="uid://wi8pxdiqq765" path="res://Assets/Icons/NodesIcons/Arrow01.svg" id="1_726p4"]
[ext_resource type="Texture2D" uid="uid://cywufl2slityq" path="res://Assets/Icons/NodesIcons/Arrow02.svg" id="2_h62ch"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1fmwm"]
bg_color = Color(0.117647, 0.137255, 0.180392, 1)
border_width_top = 35
border_color = Color(0.827451, 0.631373, 0.333333, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_top = 5.0

[node name="BridgeInNode" type="GraphNode"]
offset_right = 160.0
offset_bottom = 108.0
scale = Vector2(0.6, 0.6)
mouse_filter = 1
theme_override_styles/frame = SubResource("StyleBoxFlat_1fmwm")
title = "BridgeIn"
show_close = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = ExtResource("1_726p4")
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = ExtResource("2_h62ch")
slot/0/draw_stylebox = false
script = ExtResource("1_8y1eo")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Link to"

[node name="LinkNumber" type="SpinBox" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
min_value = 1.0
value = 1.0
allow_greater = true
allow_lesser = true
alignment = 1
update_on_text_changed = true

[connection signal="close_request" from="." to="." method="_on_close_request"]
[connection signal="position_offset_changed" from="." to="." method="_on_position_offset_changed"]
